# game-library-bridge

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  refresh.yml
docs/: publishing.md
public/: games.json
src/game_library_bridge/: __init__.py  __main__.py  config.py  logging_setup.py  merge.py  models.py  schema.py  snapshot.py
src/game_library_bridge/schemas/: games.schema.json
src/game_library_bridge/sources/: itad.py  itad_playwright.py  steam.py
tests/: conftest.py  test_cli.py  test_content_hash.py  test_itad.py  test_logging.py  test_merge.py  test_models.py  test_schema.py  test_snapshot_guard.py  test_steam.py
tests/fixtures/: itad_collection_page0.json  itad_page.html  itad_waitlist_page0.json  itad_waitlist_page1.json  steam_owned_games.json
