[project]
name = "game-library-bridge"
version = "0.1.0"
description = "Produce a stable, public, machine-readable snapshot of PC game ownership and wishlist from Steam and IsThereAnyDeal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32",
    "jsonschema>=4.21",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Only needed if the ITAD JSON endpoints stop working and the Playwright
# fallback has to render the pages instead.
browser = ["playwright>=1.44"]

[project.scripts]
game-library-bridge = "game_library_bridge.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/game_library_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
